--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
 @layer base {
   :root {
-
     --background: 0 0% 100%;
 
     --foreground: 222.2 84% 4.9%;
@@ -55,8 +52,7 @@
 
     --chart-5: 27 87% 67%;
 
-    --radius: 0.5rem
-  ;
+    --radius: 0.5rem;
 
     --sidebar-background: 0 0% 98%;
 
@@ -72,9 +68,9 @@
 
     --sidebar-border: 220 13% 91%;
 
-    --sidebar-ring: 217.2 91.2% 59.8%}
+    --sidebar-ring: 217.2 91.2% 59.8%;
+  }
   .dark {
-
     --background: 222.2 84% 4.9%;
 
     --foreground: 210 40% 98%;
@@ -121,8 +117,7 @@
 
     --chart-4: 280 65% 60%;
 
-    --chart-5: 340 75% 55%
-  ;
+    --chart-5: 340 75% 55%;
 
     --sidebar-background: 240 5.9% 10%;
 
@@ -138,10 +133,9 @@
 
     --sidebar-border: 240 3.7% 15.9%;
 
-    --sidebar-ring: 217.2 91.2% 59.8%}
+    --sidebar-ring: 217.2 91.2% 59.8%;
+  }
 }
-
-
 
 @layer base {
   * {
@@ -150,4 +144,29 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+@layer components {
+  /* --------- Primary Table --------- */
+
+  .primary-table {
+    @apply w-full;
+  }
+
+  .primary-table tbody {
+    @apply text-sm text-slate-900;
+  }
+
+  .primary-table th {
+    @apply bg-white text-sm font-semibold text-slate-900;
+  }
+
+  .primary-table td,
+  .primary-table th {
+    @apply border-collapse border px-1.5 py-1 max-lg:text-xs;
+  }
+
+  /* --------- Primary Table End --------- */
+
+  /* -------------------------------------------- */
 }
